syntax = "proto3";

package requester;

option go_package = "zephos/funnelbase/api";

message Headers {
  string key = 1;
  string value = 2;
}

service Funnelbase {
  rpc QueueRequest (Request) returns (Response) {}
  rpc AddRateLimit (RateLimit) returns (RateLimitResponse) {}
}

enum RequestMethod {
  GET = 0;
  POST = 1;
}

enum RequestPriority {
  LOW = 0;
  MEDIUM = 1;
  HIGH = 2;
}

message Request {

  string url = 1;
  RequestMethod method = 2;
  string body = 3;
  string authorization = 4;
  repeated Headers headers = 5;
  RequestPriority priority = 6;
  // time in milliseconds for the response to exist in cache assuming its successful
  // if no cacheLifespan is provided, it will not access any existing cache and it wont set any cache
  int32 cacheLifespan = 7;
  // name of the rate limit the request should be added to
  string rateLimit = 8;
  // number of tries if the request fails
  int32 retries = 9;
  // name of the client sending the request
  string client = 10;
}


message Response {
  int32 statusCode = 1;
  bool cacheHit = 2;
  string body = 3;
  repeated Headers headers = 4;

}

message RateLimit {
  string name = 1;
  // status code from the api to tell the client to backoff as its hitting rate limits
  int32 backoffStatusCode = 2; // 429
  // the header received from the api telling the client how long to wait before sending more requests
  string retryAfterHeader = 3; // Retry-After
  // time in milliseconds that the rate limit is based on
  int64 period = 4;
  // number of requests per limit that will be allowed through
  int32 limit = 5;
}

message RateLimitResponse {
  string response = 1;
}